
[project]
name = "gpxsec"
description="Package for modelling neutrino cross sections with Gaussian Processes"
readme = "README.md"
authors = [
  { name = "Ewan Miller", email = "e.w.miller@imperial.ac.uk" },
]
requires-python = ">=3.0"
license = {file="LICENSE"}
keywords = ["neutrino", "oscillation", "physics", "particle", "fitter", "statistics", "particle phyiscs", "cross section", "tensor", "experiment", "autograd", "differentiable programming"]
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Environment :: GPU",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Science/Research"
]

dynamic = ["version", "dependencies"]

[project.optional-dependencies]
docs = [
  "sphinx",
  "breathe",
  "autodoc",
  "sphinx-rtd-theme",
  "sphinx-tabs",
]
testing = [
  "pytest"
]

[project.urls]
Repository = "https://github.com/ewanwm/gpxsec"
Issues = "https://github.com/ewanwm/gpxsec/issues"
Documentation = "https://ewanwm.github.io/gpxsec/"

[build-system]
requires = ["scikit-build-core>=0.3.3", "torch"]
build-backend = "scikit_build_core.build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.scikit-build.sdist]
include = ["src/package/_version.py"]

[tool.setuptools_scm]  # Section required
write_to = "_version.py"